[package]
name = "claim"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
opt-level = "z"  # Optimize for size.
lto = true          # Enable Link Time Optimization
codegen-units = 1   # Reduce number of codegen units to increase optimizations.
panic = "abort"     # Abort on panic
strip = true

[dependencies]
cronet-rs = { git = "https://github.com/sleeyax/cronet-rs.git" }
http = "1.0.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = "0.4"
structopt = "0.3"